force-app/main/default/objects/vlocity_ins__InsuranceClaimInvolvedInjury__c/vlocity_ins__InsuranceClaimInvolvedInjury__c.object-meta.xml
<CustomObject>
    <description>Represents insurance claimant injury information reported under a claim such as severity and kind of injury, parties involved and medical cost. Master-detail child object of Claim.</description>
    <label>Involved Party</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Injury Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Involved Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>