force-app/main/default/objects/vlocity_ins__InsuranceClaimInvolvedInjury__c/fields/vlocity_ins__ImageId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ImageId__c</fullName>
    <formula>vlocity_ins__SpecProduct2Id__r.vlocity_ins__ImageId__c</formula>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>