force-app/main/default/objects/vlocity_ins__InsuranceClaimInvolvedInjury__c/fields/vlocity_ins__TreatedBy__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TreatedBy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>